cros: SetUserWallpaperInfo should return success status

There's a delay in making local state available in //ash, so we
previously created |OnReadyToSetWallpaper| to notify //chrome when
it's ready. However, we do not have the mechanism to prevent early
ShowUserWallpaper requests. The correct behavior should be to directly
ignore it, otherwise it automatically falls back to a default wallpaper
as the bug shows.

This problem only exists for browser restart, but not login. Because
the ShowUserWallpaper requested from login is very late due to web-ui
initialization.

Bug: 820196
Change-Id: Ie05235b5966b14ea80a7e83aca98f8b7147cc9b7
Reviewed-on: https://chromium-review.googlesource.com/956350
Reviewed-by: Xiaoqian Dai <xdai@chromium.org>
Commit-Queue: Wenzhao (Colin) Zang <wzang@chromium.org>
Cr-Commit-Position: refs/heads/master@{#542055}
Former-commit-id: 8cba0f0e559f5969f8f170d941d3738ede3482ab